tests/snapshots/format__formats_fixtures@every-fragment-kind.qml.snap
---
source: tests/format.rs
expression: before_and_after
input_file: tests/fixtures/every-fragment-kind.qml
---
import QtQuick

Item {
    width: parent.width+1
    onClicked: if (ready) activate()
    onPressed: { let x=1; activate(x) }
    function calculate(value: real): real { return value+1 }
}
=== formatted ===
import QtQuick

Item {
    width: parent.width + 1
    onClicked: if (ready) activate();
    onPressed: {
        let x = 1;
        activate(x);
    }
    function calculate(value: real): real {
        return value + 1;
    }
}
