tests/snapshots/format__formats_fixtures@labels-in-later-line-statements.qml.snap
---
source: tests/format.rs
expression: before_and_after
input_file: tests/fixtures/labels-in-later-line-statements.qml
---
import QtQuick

Item {
    onClicked:
        if (ready) {
            _: activate()
        }
}
=== formatted ===
import QtQuick

Item {
    onClicked:
        if (ready) {
            _: activate();
        }
}
