tests/snapshots/format__formats_fixtures@leading-trivia.qml.snap
---
source: tests/format.rs
expression: before_and_after
input_file: tests/fixtures/leading-trivia.qml
---
import QtQuick

Item {
    width: /* explanation */
        parent.width+1
    onClicked: // prepare
        if (ready) { activate() }
}
=== formatted ===
import QtQuick

Item {
    width: /* explanation */ parent.width + 1
    onClicked:
        // prepare
        if (ready) {
            activate();
        }
}
