tests/snapshots/format__formats_fixtures@multiline-template.qml.snap
---
source: tests/format.rs
expression: before_and_after
input_file: tests/fixtures/multiline-template.qml
---
import QtQuick

Item {
    text: `first
  second ${value+1}`
}
=== formatted ===
import QtQuick

Item {
    text: `first
  second ${value + 1}`
}
