tests/snapshots/format__formats_fixtures@parentheses-around-object-literals.qml.snap
---
source: tests/format.rs
expression: before_and_after
input_file: tests/fixtures/parentheses-around-object-literals.qml
---
import QtQuick

Item {
    property var config: ({a:1,b:2})
    property var member: ({a:1}).a
    property var guarded: ({a:1}) || fallback
    property var chosen: ({a:1}) ? 1 : 2
    onClicked: ({a:1}), activate()
}
=== formatted ===
import QtQuick

Item {
    property var config: ({ a: 1, b: 2 })
    property var member: ({ a: 1 }).a
    property var guarded: ({ a: 1 }) || fallback
    property var chosen: ({ a: 1 }) ? 1 : 2
    onClicked: ({ a: 1 }), activate()
}
