tests/snapshots/format__formats_fixtures@sequence-expression.qml.snap
---
source: tests/format.rs
expression: before_and_after
input_file: tests/fixtures/sequence-expression.qml
---
import QtQuick

Item {
    onClicked: prepare(),activate()
}
=== formatted ===
import QtQuick

Item {
    onClicked: prepare(), activate()
}
