tests/snapshots/format__formats_fixtures@sequence-parentheses-with-trivia.qml.snap
---
source: tests/format.rs
expression: before_and_after
input_file: tests/fixtures/sequence-parentheses-with-trivia.qml
---
import QtQuick

Item {
    onClicked: /* keep this */
        prepare(),activate()
}
=== formatted ===
import QtQuick

Item {
    onClicked: /* keep this */ prepare(), activate()
}
