tests/snapshots/format__formats_fixtures@wrapped-sequence-expression.qml.snap
---
source: tests/format.rs
expression: before_and_after
input_file: tests/fixtures/wrapped-sequence-expression.qml
---
import QtQuick

Item {
    onClicked: first.reallyLongProperty.reallyLongMethod(), second.reallyLongProperty.reallyLongMethod(), third.reallyLongProperty.reallyLongMethod()
}
=== formatted ===
import QtQuick

Item {
    onClicked:
        first.reallyLongProperty.reallyLongMethod(),
        second.reallyLongProperty.reallyLongMethod(),
        third.reallyLongProperty.reallyLongMethod()
}
